--- a/titanic-test.ipynb
+++ b/titanic-test.ipynb
@@ -103,7 +103,7 @@
    ],
    "source": [
     "train_data = pd.read_csv('/kaggle/input/titanic/train.csv')\n",
-    "print(train_data.head())"
+    "train_data.head()"
    ]
   }
  ],
